--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --text-color: #ffce11;
+  --header-height: 5rem;
 }
 
 * {
@@ -15,16 +17,43 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  height: 100vh;
+  overflow: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.siteHeader {
+  width: 100%;
+  background-color: #333;
+  padding: 1.5rem;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  flex-shrink: 0;
+}
+
+.siteHeader h1 {
+  color: var(--text-color);
+  font-weight: 600;
+  font-size: 1.8rem;
+  margin: 0;
+}
+
+.mainContent {
+  flex: 1;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .warnings {
@@ -40,18 +69,9 @@ a {
   align-items: center;
 }
 
-.logo {
-  width: 32px;
-  height: 32px;
-  position: absolute;
-  margin: 16px;
-  top: 0;
-  right: 0;
-}
-
 @media (max-width: 1100px) {
-  .logo {
-    display: none;
+  .siteHeader h1 {
+    font-size: 1.5rem;
   }
 }
 
@@ -61,7 +81,7 @@ ol {
 }
 
 a {
-  color: blue;
+  color: var(--text-color);
 }
 
 pre {
